@@ -2,6 +2,7 @@
 * 2.1-M3
 *
 
+- Improved event correlation based on network topology
 - Improved the usability of the Server Configuration, by adding descriptions and recognition for data types and possible values
 - Alternative core configuration section can be set for nxagentd using -G command line option
 - Implicit external subagent registartion using EXT:* sections in agent configuration file
